--- a/css/styles.css
+++ b/css/styles.css
@@ -11,15 +11,62 @@ a {
 ul,
 ol {
   list-style-type: none;
+  margin: 0;
+  padding: 0;
+}
+
+img {
+  display: block;
 }
 
 .visually-hidden {
-  clip-path: inset(50%);
+  height: 1px;
   overflow: hidden;
+  position: absolute;
   white-space: nowrap;
+  width: 1px;
 }
 
 /* ------------------------header------------------------- */
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p {
+  margin-top: 0;
+  margin-bottom: 0;
+}
+
+.header {
+  border-bottom: 1px solid #e7e9fc;
+}
+
+.container {
+  width: 1158px;
+  padding: 0 15px;
+  margin: 0 auto;
+}
+
+.header-container {
+  display: flex;
+  align-items: center;
+}
+
+.header-nav {
+  display: flex;
+  align-items: center;
+}
+
+.header-list {
+  display: flex;
+  gap: 40px;
+}
+
+.header-item {
+}
 
 .title {
   font-weight: 700;
@@ -39,6 +86,7 @@ ol {
   letter-spacing: 0.03em;
   text-transform: uppercase;
   color: #4d5ae5;
+  margin-right: 76px;
 }
 
 .logo-part {
@@ -51,6 +99,8 @@ ol {
   line-height: 1.5;
   letter-spacing: 0.02em;
   color: #2e2f42;
+  padding: 24px 0;
+  display: block;
 }
 
 .nav-link:hover,
@@ -60,6 +110,7 @@ ol {
 
 .address {
   font-style: normal;
+  margin-left: auto;
 }
 
 .address-link {
@@ -76,12 +127,19 @@ ol {
   color: #404bbf;
 }
 
+.address-list {
+  display: flex;
+  gap: 40px;
+}
+
 /* ------------------------------------------ */
 
 /* ------------------main-------------------- */
 
 .hero {
   background: #2e2f42;
+  padding-top: 188px;
+  padding-bottom: 188px;
 }
 
 .hero-title {
@@ -91,6 +149,9 @@ ol {
   letter-spacing: 0.02em;
   text-align: center;
   color: #fff;
+  margin: 0 auto;
+  max-width: 496px;
+  margin-bottom: 48px;
 }
 .hero-button {
   font-weight: 500;
@@ -100,11 +161,19 @@ ol {
   color: #fff;
   cursor: pointer;
   background: #4d5ae5;
+  margin: 0 auto;
+  display: block;
+  border-radius: 4px;
+  padding: 16px 32px;
 }
 
 .hero-button:hover,
 .hero-button:focus {
   background: #404bbf;
+}
+
+.features {
+  padding: 120px 0px;
 }
 
 .features-subtitle {
@@ -113,6 +182,16 @@ ol {
   line-height: 1.2;
   letter-spacing: 0.02em;
   color: #2e2f42;
+  margin-bottom: 8px;
+}
+
+.features-list {
+  display: flex;
+  gap: 24px;
+}
+
+.features-item {
+  width: calc((100% - 3 * 24px) / 4);
 }
 
 .features-text {
@@ -123,9 +202,11 @@ ol {
 
 .team {
   background: #f4f4fd;
+  padding: 120px 0;
 }
 
 .team-title {
+  margin-bottom: 72px;
 }
 
 .team-title-item {
@@ -133,6 +214,8 @@ ol {
 }
 
 .team-title-list {
+  display: flex;
+  gap: 24px;
 }
 
 .team-subtitle {
@@ -151,7 +234,19 @@ ol {
   color: #434455;
 }
 
+.portfolio {
+  padding-top: 120px;
+  padding-bottom: 120px;
+}
+
 .portfolio-title {
+  margin-bottom: 72px;
+}
+
+.portfolio-list {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 48px 24px;
 }
 
 .portfolio-subtitle {
