--- a/css/styles.css
+++ b/css/styles.css
@@ -20,11 +20,16 @@ img {
 }
 
 .visually-hidden {
-  height: 1px;
-  overflow: hidden;
   position: absolute;
-  white-space: nowrap;
   width: 1px;
+  height: 1px;
+  margin: -1px;
+  border: 0;
+  padding: 0;
+  white-space: nowrap;
+  clip-path: inset(100%);
+  clip: rect(0 0 0 0);
+  overflow: hidden;
 }
 
 /* ------------------------header------------------------- */
@@ -266,8 +271,8 @@ p {
 
 .portfolio-list-item {
   width: calc((100% - 48px) / 3);
-  border: 1px solid #e7e9fc;
   border-top: none;
+  border: 1px solid #e7e9fc;
 }
 
 .portfolio-image {
